---------------------------------------------------------------------------------------------------
Version: 0.19.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.19.5
Date: 2023-04-20
  Bugfixes:
    - Fixed that pasting a chain of cicruit wires could cause certain wires to be missing.
---------------------------------------------------------------------------------------------------
Version: 0.19.4
Date: 2023-04-18
  Minor Features:
    - Nothing important
---------------------------------------------------------------------------------------------------
Version: 0.19.3
Date: 2023-04-18
  Bugfixes:
    - Make the below change actually work
---------------------------------------------------------------------------------------------------
Version: 0.19.2
Date: 2023-04-17
  Bugfixes:
    - Fixed circuit wires not appearing on belts when created via blueprint pasting.
  Changes:
    - Control behavior will be set to no-op when adding a circuit wire for the first time, in more cases than before.
---------------------------------------------------------------------------------------------------
Version: 0.19.1
Date: 2023-04-15
  Bugfixes:
    - Fixed possible blueprint entity misalignment, when blueprint contains 2x2 grid entities and blueprint grid settings are set.
---------------------------------------------------------------------------------------------------
Version: 0.19.0
Date: 2023-04-15
  Gui:
    - Added "Exit staged build" button.
    - The full assembly settings will always be shown when a new assembl is created.
  Features:
    - Changed default stage names and icons convention. The names are now "Stage X", "Stage X.Y", and icons match when possible.
    - Blueprint icons are now by default numbered.